--- a/config/platforms/x86_64/generic/linux.conf
+++ b/config/platforms/x86_64/generic/linux.conf
@@ -2684,7 +2684,7 @@ CONFIG_HID_BELKIN=y
 # CONFIG_HID_GYRATION is not set
 CONFIG_HID_TWINHAN=y
 # CONFIG_HID_KENSINGTON is not set
-# CONFIG_HID_LCPOWER is not set
+CONFIG_HID_LCPOWER=y
 CONFIG_HID_LOGITECH=y
 # CONFIG_LOGITECH_FF is not set
 # CONFIG_LOGIRUMBLEPAD2_FF is not set
