--- a/packages/mesa/build
+++ b/packages/mesa/build
@@ -14,13 +14,13 @@ export DRI_DRIVER_SEARCH_DIR="$XORG_PATH_DRI"
 
 # DRI: Direct Rendering Interface
 pkg_uses $1 intel     && DRI_DRIVERS="${DRI_DRIVERS}i915,i965,"
-pkg_uses $1 radeon    && DRI_DRIVERS="${DRI_DRIVERS}r200,r300,r600,radeon,"
+pkg_uses $1 radeon    && DRI_DRIVERS="${DRI_DRIVERS}r200,radeon,"
 pkg_uses $1 nouveau   && DRI_DRIVERS="${DRI_DRIVERS}nouveau,"
 pkg_uses $1 r128      && DRI_DRIVERS="${DRI_DRIVERS}r128,"
 pkg_uses $1 savage    && DRI_DRIVERS="${DRI_DRIVERS}savage,"
-pkg_uses $1 mga       && DRI_DRIVERS="${DRI_DRIVERS}mga,"
+# pkg_uses $1 mga       && DRI_DRIVERS="${DRI_DRIVERS}mga,"
 pkg_uses $1 tdfx      && DRI_DRIVERS="${DRI_DRIVERS}tdfx,"
-pkg_uses $1 unichrome && DRI_DRIVERS="${DRI_DRIVERS}unichrome,"
+#pkg_uses $1 unichrome && DRI_DRIVERS="${DRI_DRIVERS}unichrome,"
 pkg_uses $1 sis       && DRI_DRIVERS="${DRI_DRIVERS}sis,"
 pkg_uses $1 mach64    && DRI_DRIVERS="${DRI_DRIVERS}mach64,"
 DRI_DRIVERS="${DRI_DRIVERS}swrast"
@@ -45,7 +45,7 @@ do_configure \
   --disable-selinux \
   --enable-glx-tls \
   --enable-xcb \
-  --with-driver=dri \
+  --enable-dri \
   --with-dri-drivers="$DRI_DRIVERS" \
   --with-dri-driverdir="$XORG_PATH_DRI" \
   --with-egl-platforms="$EGL_DISPLAYS" \
