orc: only enable ARM (and optionally NEON) backend on ARM

--- a/packages/orc/build
+++ b/packages/orc/build
@@ -3,12 +3,21 @@
 . config/options
 
 cd $BUILD/$1*
+
+BACKENDS=""
+if [ "$FPU_OPTIMIZATIONS" = neon ]; then
+   BACKENDS="--enable-backend=arm,neon"
+elif [ "$TARGET_ARCH" = arm ]; then
+   BACKENDS="--enable-backend=arm"
+fi
+
 mkdir -p objdir-host
 cd objdir-host
 do_configure host \
   --disable-gtk-doc \
   --disable-gtk-doc-html \
   --disable-gtk-doc-pdf \
+  $BACKENDS \
 
 make
 make_install toolchain
@@ -20,6 +29,7 @@ do_configure target \
   --disable-gtk-doc \
   --disable-gtk-doc-html \
   --disable-gtk-doc-pdf \
+  $BACKENDS \
 
 make
 make_install
