--- a/packages/orc/build
+++ b/packages/orc/build
@@ -6,7 +6,7 @@ cd $BUILD/$1*
 
 BACKENDS=""
 if [ "$FPU_OPTIMIZATIONS" = neon ]; then
-   BACKENDS="--enable-backend=arm,neon"
+   BACKENDS="--enable-backend=arm --enable-backend=neon"
 elif [ "$TARGET_ARCH" = arm ]; then
    BACKENDS="--enable-backend=arm"
 fi
@@ -17,7 +17,6 @@ do_configure host \
   --disable-gtk-doc \
   --disable-gtk-doc-html \
   --disable-gtk-doc-pdf \
-  $BACKENDS \
 
 make
 make_install toolchain
