--- a/packages/installator/unit/installator.service
+++ b/packages/installator/unit/installator.service
@@ -8,6 +8,7 @@ Type=oneshot
 ExecStart=/sbin/installator
 StandardInput=tty-force
 StandardOutput=inherit
+StandardError=inherit
 
 [Install]
 WantedBy=installator.target
