xbmc : remove unneeded patch

--- a/packages/xbmc/build
+++ b/packages/xbmc/build
@@ -89,7 +89,7 @@ do_configure \
 # leaked host includes break the Python components build
 sed -i Makefile.include -e "s:-I$ROOT/$TOOLCHAIN/include::"
 
-export MAKEFLAGS=-j1
+#export MAKEFLAGS=-j1
 make externals
 make xbmc.bin
 make xbmc-xrandr
