util-linux-ng : bump to 2.20

--- a/packages/util-linux-ng/build
+++ b/packages/util-linux-ng/build
@@ -15,6 +15,7 @@ setup_toolchain host
 do_configure host \
             --without-ncurses \
             --disable-tls \
+            --disable-wall \
 
 make
 make_install toolchain
@@ -26,6 +27,7 @@ cd objdir-target
 setup_toolchain target
 do_configure target \
             --without-ncurses \
+            --disable-wall \
             $TLS_CONFIG \
 
 make
