--- a/packages/e2fsprogs/build
+++ b/packages/e2fsprogs/build
@@ -5,7 +5,7 @@
 cd $BUILD/$1*
 
 do_configure \
-  --disable-libuuid \
+  --enable-libuuid \
   --disable-libblkid \
   --disable-debugfs \
   --disable-profile \
