gst-plugins-good: enable icydemux, baresip wants that

--- a/packages/gst-plugins-good/build
+++ b/packages/gst-plugins-good/build
@@ -45,7 +45,7 @@ do_configure \
             --enable-equalizer \
             --enable-flv \
             --enable-id3demux \
-            --disable-icydemux \
+            --enable-icydemux \
             --enable-interleave \
             --enable-flx \
             --disable-goom \
