systemd: upgrade to v39

--- a/packages/systemd/build
+++ b/packages/systemd/build
@@ -10,6 +10,7 @@ do_configure \
             --disable-tcpwrap \
             --disable-pam \
             --disable-audit \
+            --disable-acl \
             --disable-libcryptsetup \
             --disable-gtk \
             --disable-binfmt \
