MPlayer : fix build with arm target

--- a/packages/MPlayer/build
+++ b/packages/MPlayer/build
@@ -75,6 +75,19 @@ export CFLAGS="$CFLAGS -ffast-math -DFIXED_POINT"
 
 cd $BUILD/$1*
 #rm -rf libavcodec # ensure we check for headers in external ffmpeg
+
+LIBAV="--enable-libavcodec_so --enable-libavformat_so --enable-libavutil_so --enable-libpostproc_so --enable-libswscale_so \
+         --disable-libavcodec_a --disable-libavformat_a --disable-libavutil_a --disable-libpostproc_a --disable-libswscale_a"
+
+if [ "$TARGET_ARCH" = arm ] ; then
+  for f in ftree-loop-distribution \
+         floop-interchange floop-strip-mine floop-block; do
+    CFLAGS=$(echo $CFLAGS | sed -e "s%-$f%%")
+    CXXFLAGS=$(echo $CXXFLAGS | sed -e "s%-$f%%")
+  done
+  LIBAV="--enable-libavcodec_so --enable-libavformat_so --enable-libavutil_so --enable-libpostproc_so --enable-libswscale_so"
+fi
+
 ./configure --prefix=/usr \
             --confdir=/etc/mplayer \
             --extra-ldflags="$EXTRA_LIBDIR" \
@@ -120,16 +133,7 @@ cd $BUILD/$1*
             --disable-xvid \
             --disable-x264 \
             --disable-demuxer=matroska \
-            --enable-libavcodec_so \
-            --enable-libavformat_so \
-            --enable-libavutil_so \
-            --enable-libpostproc_so \
-            --enable-libswscale_so \
-            --disable-libavcodec_a \
-            --disable-libavformat_a \
-            --disable-libavutil_a \
-            --disable-libpostproc_a \
-            --disable-libswscale_a \
+            $LIBAV \
             --disable-speex \
             $VORBIS_CONFIG \
             --enable-theora \
