mesa : bump to 8.0-rc2

--- a/packages/mesa/build
+++ b/packages/mesa/build
@@ -29,7 +29,7 @@ DRI_DRIVERS="${DRI_DRIVERS}swrast"
 GALLIUM_EGL="--disable-gallium-egl"
 GALLIUM_OVG="--disable-openvg"
 if pkg_uses $1 gallium3d; then
-  pkg_uses $1 radeon  && GALLIUM_DRIVERS="${GALLIUM_DRIVERS}r600,"
+  pkg_uses $1 radeon  && GALLIUM_DRIVERS="${GALLIUM_DRIVERS}r300,r600,"
   pkg_uses $1 nouveau && GALLIUM_DRIVERS="${GALLIUM_DRIVERS}nouveau,"
   GALLIUM_DRIVERS="${GALLIUM_DRIVERS}swrast"
   GALLIUM_EGL="--enable-gallium-egl"
