mesa : refresh srcipt build and dependencie

--- a/packages/mesa/build
+++ b/packages/mesa/build
@@ -34,6 +34,7 @@ if pkg_uses $1 gallium3d; then
   GALLIUM_DRIVERS="${GALLIUM_DRIVERS}swrast"
   GALLIUM_EGL="--enable-gallium-egl"
   GALLIUM_OVG="--enable-openvg"
+  export LLVM_CONFIG="$SYSROOT_PREFIX/usr/local/bin/llvm-config"
 fi
 
 # EGL: Embedded Graphics Library (native platform graphics interface)
@@ -44,7 +45,6 @@ do_configure \
   --disable-debug \
   --disable-selinux \
   --enable-glx-tls \
-  --enable-xcb \
   --enable-dri \
   --with-dri-drivers="$DRI_DRIVERS" \
   --with-dri-driverdir="$XORG_PATH_DRI" \
@@ -52,7 +52,6 @@ do_configure \
   --with-egl-driver-dir="$XORG_PATH_EGL" \
   --with-xorg-driver-dir="$XORG_PATH_DRIVERS" \
   --with-gallium-drivers="$GALLIUM_DRIVERS" \
-  --disable-gallium-llvm \
   $GALLIUM_EGL \
   --enable-opengl \
   --enable-gles1 \
@@ -62,10 +61,6 @@ do_configure \
   --enable-shared-dricore \
   --enable-driglx-direct \
   --enable-glu \
-  --disable-gl-osmesa \
-  --disable-glut \
-  --disable-glw \
-  --disable-motif \
 
 # build internal compiler
 make \
