--- a/packages/xbmc/unit/xbmc.service
+++ b/packages/xbmc/unit/xbmc.service
@@ -1,11 +1,12 @@
 [Unit]
 Description=XBMC Media Center
+Requires=xorg.service
+After=xorg.service
 
 [Service]
 Environment=DISPLAY=:0.0 SDL_MOUSE_RELATIVE=0 HOME=/root
 ExecStart=/usr/lib/xbmc/xbmc.bin --standalone -fs -l /var/run/lirc/lircd
 Restart=always
-KillSignal=SIGKILL
 
 [Install]
 WantedBy=xbmc.target
