--- a/packages/mesa/build
+++ b/packages/mesa/build
@@ -23,6 +23,7 @@ pkg_uses $1 tdfx      && DRI_DRIVERS="${DRI_DRIVERS}tdfx,"
 #pkg_uses $1 unichrome && DRI_DRIVERS="${DRI_DRIVERS}unichrome,"
 pkg_uses $1 sis       && DRI_DRIVERS="${DRI_DRIVERS}sis,"
 pkg_uses $1 mach64    && DRI_DRIVERS="${DRI_DRIVERS}mach64,"
+pkg_uses $1 vdpau && VDPAU="--enable-vdpau" || VDPAU="--disable-vdpau"
 DRI_DRIVERS="${DRI_DRIVERS}swrast"
 
 # Gallium 3D
@@ -61,6 +62,7 @@ do_configure \
   --enable-shared-dricore \
   --enable-driglx-direct \
   --enable-glu \
+  $VDPAU \
 
 # build internal compiler
 make \
