libxcb: enable more components

--- a/packages/libxcb/build
+++ b/packages/libxcb/build
@@ -40,28 +40,28 @@ mkdir -p objdir-target
 cd objdir-target
 do_configure target \
             --disable-build-docs \
-            --disable-composite \
-            --disable-damage \
-            --disable-dpms \
+            --enable-composite \
+            --enable-damage \
+            --enable-dpms \
             --enable-dri2 \
             --enable-glx \
             --enable-randr \
-            --disable-record \
+            --enable-record \
             --enable-render \
-            --disable-resource \
-            --disable-screensaver \
+            --enable-resource \
+            --enable-screensaver \
             --enable-shape \
             --enable-shm \
-            --disable-sync \
-            --disable-xevie \
+            --enable-sync \
+            --enable-xevie \
             --enable-xfixes \
             --enable-xfree86-dri \
-            --disable-xinerama \
+            --enable-xinerama \
             --enable-xinput \
             --disable-xprint \
             --disable-selinux \
             --disable-xtest \
             --enable-xv \
-            --disable-xvmc
+            --enable-xvmc
 make
 make_install
