--- a/packages/libxcb/build
+++ b/packages/libxcb/build
@@ -2,66 +2,44 @@
 
 . config/options
 
+xcb_configure () {
+  do_configure $2 \
+    --disable-build-docs \
+    --enable-composite \
+    --enable-damage \
+    --enable-dpms \
+    --enable-dri2 \
+    --enable-glx \
+    --enable-randr \
+    --enable-record \
+    --enable-render \
+    --enable-resource \
+    --enable-screensaver \
+    --enable-shape \
+    --enable-shm \
+    --enable-sync \
+    --enable-xevie \
+    --enable-xfixes \
+    --enable-xfree86-dri \
+    --enable-xinerama \
+    --enable-xinput \
+    --disable-xprint \
+    --disable-selinux \
+    --disable-xtest \
+    --enable-xv \
+    --enable-xvmc
+}
+
+xcb_build () {
+  mkdir -p objdir-$2
+  cd objdir-$2
+  xcb_configure $1 $2
+  make
+  make_install $3
+  cd ..
+}
+
 cd $BUILD/$1*
 
-mkdir -p objdir-host
-cd objdir-host
-do_configure host \
-            --disable-build-docs \
-            --disable-composite \
-            --disable-damage \
-            --disable-dpms \
-            --enable-dri2 \
-            --enable-glx \
-            --enable-randr \
-            --disable-record \
-            --enable-render \
-            --disable-resource \
-            --disable-screensaver \
-            --disable-shape \
-            --enable-shm \
-            --disable-sync \
-            --disable-xevie \
-            --enable-xfixes \
-            --enable-xfree86-dri \
-            --disable-xinerama \
-            --enable-xinput \
-            --disable-xprint \
-            --disable-selinux \
-            --disable-xtest \
-            --enable-xv \
-            --disable-xvmc \
-
-make
-make_install toolchain
-cd ..
-
-mkdir -p objdir-target
-cd objdir-target
-do_configure target \
-            --disable-build-docs \
-            --enable-composite \
-            --enable-damage \
-            --enable-dpms \
-            --enable-dri2 \
-            --enable-glx \
-            --enable-randr \
-            --enable-record \
-            --enable-render \
-            --enable-resource \
-            --enable-screensaver \
-            --enable-shape \
-            --enable-shm \
-            --enable-sync \
-            --enable-xevie \
-            --enable-xfixes \
-            --enable-xfree86-dri \
-            --enable-xinerama \
-            --enable-xinput \
-            --disable-xprint \
-            --disable-selinux \
-            --disable-xtest \
-            --enable-xv \
-            --enable-xvmc
-make
-make_install
+xcb_build $1 host toolchain
+xcb_build $1 target
