--- a/packages/mesa/build
+++ b/packages/mesa/build
@@ -17,6 +17,7 @@ pkg_uses $1 intel     && DRI_DRIVERS="${DRI_DRIVERS}i915,i965,"
 pkg_uses $1 radeon    && DRI_DRIVERS="${DRI_DRIVERS}r200,radeon,"
 pkg_uses $1 nouveau   && DRI_DRIVERS="${DRI_DRIVERS}nouveau,"
 pkg_uses $1 vdpau && VDPAU="--enable-vdpau" || VDPAU="--disable-vdpau"
+pkg_uses $1 xvmc && XVMC="--enable-xvmc" || XVMC="--disable-xvmc"
 DRI_DRIVERS="${DRI_DRIVERS}swrast"
 
 # Gallium 3D
@@ -28,6 +29,7 @@ if pkg_uses $1 gallium3d; then
   GALLIUM_DRIVERS="${GALLIUM_DRIVERS}swrast"
   GALLIUM_EGL="--enable-gallium-egl"
   GALLIUM_OVG="--enable-openvg"
+  GALLIUM_LLVM="--enable-gallium-llvm"
   export LLVM_CONFIG="$SYSROOT_PREFIX/usr/local/bin/llvm-config"
 fi
 
@@ -51,11 +53,13 @@ do_configure \
   --enable-gles1 \
   --enable-gles2 \
   $GALLIUM_OVG \
+  $GALLIUM_LLVM \
   --enable-shared-glapi \
   --enable-shared-dricore \
   --enable-driglx-direct \
   --enable-glu \
   $VDPAU \
+  $XVMC \
 
 # build internal compiler
 make \
