llvm: correctly install/strip package, saves 150 MB

--- a/packages/llvm/build
+++ b/packages/llvm/build
@@ -30,8 +30,6 @@ do_configure --enable-polly \
              --disable-ltdl-install \
 
 export LLVM_TBLGEN="$ROOT/$TOOLCHAIN/bin/llvm-tblgen"
-make
 
-mkdir -p .install
-make DESTDIR=`pwd`/.install VERBOSE=1 install
-cd ..
+make
+make_install
