--- a/packages/mesa/build
+++ b/packages/mesa/build
@@ -36,6 +36,9 @@ fi
 # EGL: Embedded Graphics Library (native platform graphics interface)
 EGL_DISPLAYS="x11,drm"
 
+# LLVM Hack
+sed -i 's%LLVM_LIBS=".*"%LLVM_LIBS="-lLLVM-$LLVM_VERSION"%' configure
+
 GCC_NO_GOLD=1 GCC_NO_LTO=1 \
 do_configure \
   --disable-debug \
