--- a/packages/MPlayer/build
+++ b/packages/MPlayer/build
@@ -51,6 +51,8 @@ if pkg_uses $1 vdpau; then
   EXTRA_LIBS="$EXTRA_LIBS -lvdpau"
 fi
 
+[ "$TARGET_ARCH" = i386 ] && EXTRA_LIBS="$EXTRA_LIBS -lfontconfig"
+
 if [ "$TARGET_ARCH" = arm ]; then
   VORBIS_CONFIG="--disable-libvorbis \
                  --enable-tremor-internal \
@@ -76,8 +78,7 @@ export CFLAGS="$CFLAGS -ffast-math -DFIXED_POINT"
 cd $BUILD/$1*
 #rm -rf libavcodec # ensure we check for headers in external ffmpeg
 
-LIBAV="--enable-libavcodec_so --enable-libavformat_so --enable-libavutil_so --enable-libpostproc_so --enable-libswscale_so \
-         --disable-libavcodec_a --disable-libavformat_a --disable-libavutil_a --disable-libpostproc_a --disable-libswscale_a"
+LIBAV="--enable-libavcodec_so --enable-libavformat_so --enable-libavutil_so --enable-libpostproc_so --enable-libswscale_so"
 
 if [ "$TARGET_ARCH" = arm ] ; then
   for f in ftree-loop-distribution \
@@ -85,7 +86,6 @@ if [ "$TARGET_ARCH" = arm ] ; then
     CFLAGS=$(echo $CFLAGS | sed -e "s%-$f%%")
     CXXFLAGS=$(echo $CXXFLAGS | sed -e "s%-$f%%")
   done
-  LIBAV="--enable-libavcodec_so --enable-libavformat_so --enable-libavutil_so --enable-libpostproc_so --enable-libswscale_so"
 fi
 
 ./configure --prefix=/usr \
