openssl : install libs in usr/lib

--- a/packages/openssl/build
+++ b/packages/openssl/build
@@ -38,6 +38,12 @@ install_dir_debug="`pwd`/.install-debuginfo"
 mkdir -p $install_dir
 make CC=$CC LD=$LD RANLIB=$RANLIB INSTALL_PREFIX="$install_dir" install_sw
 
+if [ -d .install/usr/lib64 ]; then
+  mkdir .install/usr/lib
+  mv .install/usr/lib64/* .install/usr/lib/
+  rmdir .install/usr/lib64
+fi
+
 # remove static libs, we don't want them
 rm -f $install_dir/usr/lib/*.a
 
