--- a/packages/sgx530-OpenGLES/build
+++ b/packages/sgx530-OpenGLES/build
@@ -17,7 +17,7 @@ else
 fi
 
 cp -PR ${ES}/usr "$install_dir/usr"
-cp -PR usr "$install_dir/usr"
+cp -PR usr "$install_dir"
 
 strip_libs "$install_dir"     "$install_dir_debug/usr/lib/debug"
 strip_bins "$install_dir/usr" "$install_dir_debug/usr/lib/debug"
