--- a/packages/busybox/config/busybox.conf
+++ b/packages/busybox/config/busybox.conf
@@ -562,15 +562,15 @@ CONFIG_LSPCI=y
 CONFIG_MKSWAP=y
 CONFIG_FEATURE_MKSWAP_UUID=y
 CONFIG_MORE=y
-# CONFIG_MOUNT is not set
+CONFIG_MOUNT=y
 CONFIG_FEATURE_MOUNT_FAKE=y
-# CONFIG_FEATURE_MOUNT_VERBOSE is not set
-# CONFIG_FEATURE_MOUNT_HELPERS is not set
-# CONFIG_FEATURE_MOUNT_LABEL is not set
-# CONFIG_FEATURE_MOUNT_NFS is not set
-# CONFIG_FEATURE_MOUNT_CIFS is not set
-# CONFIG_FEATURE_MOUNT_FLAGS is not set
-# CONFIG_FEATURE_MOUNT_FSTAB is not set
+CONFIG_FEATURE_MOUNT_VERBOSE=y
+CONFIG_FEATURE_MOUNT_HELPERS=y
+CONFIG_FEATURE_MOUNT_LABEL=y
+CONFIG_FEATURE_MOUNT_NFS=y
+CONFIG_FEATURE_MOUNT_CIFS=y
+CONFIG_FEATURE_MOUNT_FLAGS=y
+CONFIG_FEATURE_MOUNT_FSTAB=y
 # CONFIG_PIVOT_ROOT is not set
 CONFIG_RDATE=y
 # CONFIG_RDEV is not set
@@ -583,7 +583,7 @@ CONFIG_SWAPONOFF=y
 CONFIG_FEATURE_SWAPON_PRI=y
 # CONFIG_SWITCH_ROOT is not set
 CONFIG_UMOUNT=y
-# CONFIG_FEATURE_UMOUNT_ALL is not set
+CONFIG_FEATURE_UMOUNT_ALL=y
 
 #
 # Common options for mount/umount
