binutils-tools: fix, build for target

--- a/packages/binutils-tools/build
+++ b/packages/binutils-tools/build
@@ -7,6 +7,9 @@ cd $BUILD/$1*
 do_configure \
              --disable-werror \
              --disable-multilib \
+             --target=$TARGET_NAME \
+             --with-sysroot=$SYSROOT_PREFIX \
+             --prefix=/usr \
              --disable-nls \
              --disable-gold \
              --disable-ld \
