mplayer : fix build for arm (patch by Nikolay Nikolaev)

--- a/packages/MPlayer/build
+++ b/packages/MPlayer/build
@@ -51,7 +51,7 @@ if pkg_uses $1 vdpau; then
   EXTRA_LIBS="$EXTRA_LIBS -lvdpau"
 fi
 
-[ "$TARGET_ARCH" = i386 -o "$TARGET_ARCH" = x86_64 ] && EXTRA_LIBS="$EXTRA_LIBS -lfontconfig"
+[ "$TARGET_ARCH" = i386 -o "$TARGET_ARCH" = x86_64 -o "$TARGET_ARCH" = arm ] && EXTRA_LIBS="$EXTRA_LIBS -lfontconfig"
 
 if [ "$TARGET_ARCH" = arm ]; then
   VORBIS_CONFIG="--disable-libvorbis \
