--- a/packages/busybox-init/config/busybox.conf
+++ b/packages/busybox-init/config/busybox.conf
@@ -223,7 +223,7 @@ CONFIG_ENV=y
 # CONFIG_HOSTID is not set
 # CONFIG_INSTALL is not set
 # CONFIG_FEATURE_INSTALL_LONG_OPTIONS is not set
-# CONFIG_LN is not set
+CONFIG_LN=y
 # CONFIG_LOGNAME is not set
 CONFIG_LS=y
 # CONFIG_FEATURE_LS_FILETYPES is not set
