mediastreamer: pulseaudio support

--- a/packages/mediastreamer/build
+++ b/packages/mediastreamer/build
@@ -4,11 +4,24 @@
 
 cd $BUILD/$1*
 
-#./autogen.sh
+if pkg_uses $1 alsa; then
+	ALSA=--enable-alsa
+else
+	ALSA=--disable-alsa
+fi
+
+if pkg_uses $1 pulseaudio; then
+	PULSE=--enable-pulseaudio
+else
+	PULSE=--disable-pulseaudio
+fi
+
 do_configure \
 	--disable-x11 \
 	--disable-xv \
-	--enable-external-ortp
+	--disable-oss \
+	--enable-external-ortp \
+	--disable-tests
 
 make
 make_install
