--- a/packages/libosip2/build
+++ b/packages/libosip2/build
@@ -6,7 +6,9 @@ setup_toolchain target
 
 cd $BUILD/$1*
 
-./autogen.sh
-do_configure
-make 
+do_autoconf
+do_configure \
+	--enable-pthread
+
+make
 make_install
