ralink-8070-3070-3370-5372-usb : add missing udev rules and firmware

--- a/packages/ralink-8070-3070-3370-5372-usb/build
+++ b/packages/ralink-8070-3070-3370-5372-usb/build
@@ -22,4 +22,8 @@ make osdrv CC=$CC LD=$LD LINUX_SRC=$(kernel_path) SYSSRC=$(kernel_path) SYSOUT=$
 mkdir -p .install/lib/modules/$(kernel_version)/kernel/drivers/net/wireless
 cp -P os/linux/*.ko .install/lib/modules/$(kernel_version)/kernel/drivers/net/wireless
 
+mkdir -p .install/etc/Wireless/RT2870STA
+cp RT2870STA.dat .install/etc/Wireless/RT2870STA
 
+mkdir -p .install/lib/udev/rules.d/
+cp $ROOT/$PACKAGES/$1/config/*.rules .install/lib/udev/rules.d/
