--- a/packages/xf86-video-fglrx/build
+++ b/packages/xf86-video-fglrx/build
@@ -24,12 +24,15 @@ cd $BUILD/$1*
 cp -P arch/$ARCH/lib/modules/fglrx/build_mod/libfglrx_ip.a \
   common/lib/modules/fglrx/build_mod/2.6.x
 
-cd common/lib/modules/fglrx/build_mod/2.6.x
+cd $ROOT/$BUILD/$1*/common/lib/modules/fglrx/build_mod
+patch -p1 < $ROOT/$PACKAGES/xf86-video-fglrx/patches/TS_USEDFPU.patch-
+cd $ROOT/$BUILD/$1*/common/lib/modules/fglrx/build_mod/2.6.x
 [ "$TARGET_ARCH" = x86_64 ] && patch -p0 < $ROOT/$PACKAGES/xf86-video-fglrx/patches/compat.patch-
+
 make CC=${CC} \
      KDIR=$(kernel_path) \
      KVER=$(kernel_version)
-cd -
+cd $ROOT/$BUILD/$1*
 
 rm -rf .install
 
