mediastreamer: fix build with PulseAudio vs. ALSA

--- a/packages/mediastreamer/build
+++ b/packages/mediastreamer/build
@@ -21,7 +21,9 @@ do_configure \
 	--disable-xv \
 	--disable-oss \
 	--enable-external-ortp \
-	--disable-tests
+	--disable-tests \
+	$ALSA \
+	$PULSE \
 
 make
 make_install
