busybox-init : install fuse & ntfs-3g for linuxrc

--- a/packages/busybox-init/build
+++ b/packages/busybox-init/build
@@ -3,6 +3,8 @@
 . config/options
 
 $SCRIPTS/build plymouth-lite
+$SCRIPTS/install fuse
+$SCRIPTS/install ntfs-3g
 
 cd $BUILD/$1*
 export ARCH=$TARGET_ARCH
