imx5-lib : add patch for videodev.h

--- a/packages/libtool-host/build
+++ b/packages/libtool-host/build
@@ -14,3 +14,5 @@ make_install toolchain
 sed -i .install/usr/bin/libtoolize -e "s:^prefix=.*\$:prefix=$ROOT/$TOOLCHAIN:"
 
 cp -R .install/$ROOT/$TOOLCHAIN/share .install/usr/
+
+[ -d .install/usr/lib64 ] && mv .install/usr/lib64 .install/usr/lib
