--- a/packages/binutils/build
+++ b/packages/binutils/build
@@ -29,5 +29,7 @@ cd objdir
 
 make
 make_install toolchain
+[ -d .install/usr/lib64 ] && mv .install/usr/lib64 .install/usr/lib
 rm -rf ../.install
 mv .install ..
+
