--- a/packages/libtool-host/build
+++ b/packages/libtool-host/build
@@ -15,4 +15,5 @@ sed -i .install/usr/bin/libtoolize -e "s:^prefix=.*\$:prefix=$ROOT/$TOOLCHAIN:"
 
 cp -R .install/$ROOT/$TOOLCHAIN/share .install/usr/
 
-[ -d .install/usr/lib64 ] && mv .install/usr/lib64 .install/usr/lib
+if [ -d .install/usr/lib64 ]; then mv .install/usr/lib64 .install/usr/lib; fi
+
