systemd: do not build man pages (thanks Nikolay Nikolaev)

--- a/packages/systemd/build
+++ b/packages/systemd/build
@@ -22,6 +22,7 @@ do_configure \
             --disable-xz \
             --disable-quotacheck \
             --disable-readahead \
+            --disable-manpages \
             --with-distro=other \
             --with-dbussessionservicedir=/usr/share/dbus-1/services \
             --with-dbussystemservicedir=/usr/share/dbus-1/system-services \
