xorg-server : bump to 1.11.4

--- a/packages/xorg-server/build
+++ b/packages/xorg-server/build
@@ -4,6 +4,16 @@
 
 $SCRIPTS/unpack mesa
 
+get_meta $1
+
+if [ -d $ROOT/$BUILD/$1-$PKG_VERSION/debian/patches ] ; then
+  while read i ; do
+    if [ -f  $ROOT/$BUILD/$1-$PKG_VERSION//debian/patches/$i ] ; then 
+      apply_patch $1 $ROOT/$BUILD/$1-$PKG_VERSION/debian/patches/$i
+    fi
+  done < $ROOT/$BUILD/$1-$PKG_VERSION/debian/patches/series
+fi
+
 cd $BUILD/$1*
 
 do_autoconf
@@ -16,6 +26,7 @@ export GL_CFLAGS="-I$MESA_DIR/include"
 export GL_LIBS=" "
 export DRI_CFLAGS="-I$LIB_PREFIX/include"
 export DRI_LIBS=" "
+sed -i 's%dridriverdir=`$PKG_CONFIG --variable=dridriverdir dri`%dridriverdir=/usr/lib/dri%' configure
 
 export LIBS="-ludev"
 GCC_NO_GOLD=1 GCC_NO_LTO=1 \
