boost : fix compilation issue

--- a/packages/boost/build
+++ b/packages/boost/build
@@ -13,7 +13,7 @@ cp bin.*/bjam $ROOT/$TOOLCHAIN/bin
 cd -
 
 # pkg_uses $1 icu && ICU_CONFIG=ON || ICU_CONFIG=OFF
-
+setup_toolchain target
 sh bootstrap.sh --prefix=/usr \
                 --with-bjam=$ROOT/$TOOLCHAIN/bin/bjam \
                 --with-python=$ROOT/$TOOLCHAIN/bin/python \
