grub : fix build script

--- a/packages/grub/build
+++ b/packages/grub/build
@@ -10,7 +10,7 @@ HEADERS="`kernel_path`/arch/x86/include"
 COMMAND_LINE_SIZE=`cat ${HEADERS}/asm/setup.h | grep "^#define COMMAND_LINE_SIZE" | cut -d\  -f3`
 export TARGET_CPPFLAGS="-DCOMMAND_LINE_SIZE=${COMMAND_LINE_SIZE} ${TARGET_CPPFLAGS}"
 
-cd $BUILD/$1*
+cd $BUILD/$1-r*
 
 mkdir -p host-build
 cd host-build
