xorg-server : fix script build, thanks Peter

--- a/packages/xorg-server/build
+++ b/packages/xorg-server/build
@@ -8,8 +8,8 @@ get_meta $1
 
 if [ -d $ROOT/$BUILD/$1-$PKG_VERSION/debian/patches ] ; then
   while read i ; do
-    if [ -f  $ROOT/$BUILD/$1-$PKG_VERSION//debian/patches/$i ] ; then 
-      apply_patch $1 $ROOT/$BUILD/$1-$PKG_VERSION/debian/patches/$i
+    if [ -f  "$ROOT/$BUILD/$1-$PKG_VERSION//debian/patches/$i" ] ; then 
+      apply_patch $1 "$ROOT/$BUILD/$1-$PKG_VERSION/debian/patches/$i"
     fi
   done < $ROOT/$BUILD/$1-$PKG_VERSION/debian/patches/series
 fi
