xf86-video-intel : bump version to 2.18+0464e93a

--- a/packages/xf86-video-intel/build
+++ b/packages/xf86-video-intel/build
@@ -4,6 +4,7 @@
 
 cd $BUILD/$1*
 xorg_drv_configure_prepend
+do_autoconf
 do_configure \
             --enable-dri \
             --enable-kms-only \
