--- a/packages/xbmc/unit/xbmc.service
+++ b/packages/xbmc/unit/xbmc.service
@@ -7,7 +7,7 @@ After=xorg.service
 Environment=DISPLAY=:0.0 SDL_MOUSE_RELATIVE=0 HOME=/root
 ExecStart=/usr/lib/xbmc/xbmc.bin --standalone -fs -l /var/run/lirc/lircd
 Restart=always
-KillSignal=SIGKILL
+# KillSignal=SIGKILL
 
 [Install]
 WantedBy=xbmc.target
