xf86-video-nvidia-old : fix build after kernel upgrade

--- a/packages/xf86-video-nvidia-old/build
+++ b/packages/xf86-video-nvidia-old/build
@@ -16,6 +16,10 @@ do_symlink() {
   ln -s $lib.so.1 $dest/$lib.so
 }
 
+cd $(kernel_path)/arch/x86/include
+cp generated/asm/unistd*.h ./asm
+cd -
+
 cd $BUILD/$1*
 
 # Kernel module
