libdce : don't mix files

--- a/packages/libdce/build
+++ b/packages/libdce/build
@@ -8,5 +8,5 @@ do_configure
 make
 make_install
 
-mkdir -p .install/firmware/omap4
-cp -P firmware/*.xem3 .install/firmware/omap4
+mkdir -p .install/firmware/omap4/libdce
+cp -P firmware/*.xem3 .install/firmware/omap4/libdce
