linux : omap4 : bump version to =3.2.0-1412.16

--- a/config/platforms/arm/omap4/linux.conf
+++ b/config/platforms/arm/omap4/linux.conf
@@ -783,6 +783,7 @@ CONFIG_DRM=y
 CONFIG_DRM_I2C_CH7006=m
 CONFIG_DRM_I2C_SIL164=m
 CONFIG_DRM_KMS_HELPER=y
+CONFIG_DRM_LOAD_EDID_FIRMWARE=y
 CONFIG_DRM_OMAP=y
 CONFIG_DRM_OMAP_NUM_CRTCS=1
 CONFIG_DS1682=m
@@ -1856,13 +1857,13 @@ CONFIG_MAC80211_RC_PID=y
 # CONFIG_MAC80211_VERBOSE_PS_DEBUG is not set
 # CONFIG_MAC80211_VERBOSE_TDLS_DEBUG is not set
 CONFIG_MACH_OMAP4_PANDA=y
-CONFIG_MACH_OMAP4_PANDA_CAMERA_SUPPORT=y
+# CONFIG_MACH_OMAP4_PANDA_CAMERA_SUPPORT is not set
 # CONFIG_MACH_OMAP4_PANDA_CAM_OV5640 is not set
-CONFIG_MACH_OMAP4_PANDA_CAM_OV5650=y
+# CONFIG_MACH_OMAP4_PANDA_CAM_OV5650 is not set
 CONFIG_MACH_OMAP_4430SDP=y
-CONFIG_MACH_OMAP_4430SDP_CAMERA_SUPPORT=y
+# CONFIG_MACH_OMAP_4430SDP_CAMERA_SUPPORT is not set
 # CONFIG_MACH_OMAP_4430SDP_CAM_OV5640 is not set
-CONFIG_MACH_OMAP_4430SDP_CAM_OV5650=y
+# CONFIG_MACH_OMAP_4430SDP_CAM_OV5650 is not set
 CONFIG_MACH_OMAP_GENERIC=y
 CONFIG_MACVLAN=m
 CONFIG_MACVTAP=m
@@ -2624,7 +2625,6 @@ CONFIG_QUOTA_NETLINK_INTERFACE=y
 CONFIG_QUOTA_TREE=m
 CONFIG_R3964=m
 CONFIG_R8712U=m
-# CONFIG_R8712_AP is not set
 CONFIG_RADIO_ADAPTERS=y
 CONFIG_RADIO_SAA7706H=m
 CONFIG_RADIO_SI470X=y
@@ -3866,7 +3866,6 @@ CONFIG_VIDEO_MT9V011=m
 CONFIG_VIDEO_OMAP4=y
 # CONFIG_VIDEO_OMAP4_DEBUG is not set
 CONFIG_VIDEO_OUTPUT_CONTROL=m
-CONFIG_VIDEO_OV5650=y
 CONFIG_VIDEO_PVRUSB2=m
 # CONFIG_VIDEO_PVRUSB2_DEBUGIFC is not set
 CONFIG_VIDEO_PVRUSB2_DVB=y
