installator and grub-efi: Added EFI based installation to the installator script, Added the use of GNU Parted for optimal disk alignment (SSD) and simplicity of partition creation to the installator script, Added some modules to EFI bootloader created with the grub-efi package

--- a/packages/grub-efi/build
+++ b/packages/grub-efi/build
@@ -17,7 +17,7 @@ $ROOT/$TOOLCHAIN/bin/grub-mkimage \
 	-d $ROOT/$TOOLCHAIN/lib/grub/${TARGET_ARCH}-efi \
 	-o $efi_file \
 	-p "" \
-	part_gpt part_msdos fat ext2 iso9660 hfs hfsplus normal boot configfile linux efi_gop efi_uga gfxterm
+	part_gpt part_msdos fat ext2 iso9660 hfs hfsplus normal boot configfile linux efi_gop efi_uga gfxterm search help
 
 #wget http://unifoundry.com/unifont-5.1.20080820.pcf.gz
 #gunzip -f unifont-5.1.20080820.pcf.gz
