mali400: bump version to 2.1-7 Switch to deb file as a PKG source.

--- a/packages/mali400/build
+++ b/packages/mali400/build
@@ -9,6 +9,11 @@ install_dir_debug="$PWD/.install-debuginfo"
 
 rm -rf "$install_dir"
 mkdir -p "$install_dir"
+
+mkdir usr
+mv lib usr
+mv include usr
+mv share usr
 cp -PR usr $install_dir
 
 strip_libs "$install_dir"     "$install_dir_debug/usr/lib/debug"
