--- a/packages/snowball-v5-startupfiles/build
+++ b/packages/snowball-v5-startupfiles/build
@@ -5,4 +5,4 @@
 cd $BUILD/$1*
 
 mkdir -p .install/usr/share/snowball-startupfiles
-cp * .install/usr/share/snowball-startupfiles
+cp boot/* .install/usr/share/snowball-startupfiles
