--- a/packages/xf86-video-mali/build
+++ b/packages/xf86-video-mali/build
@@ -8,6 +8,8 @@ cd $BUILD/$1*
 
 export local_cflags="-I$(kernel_path)/include -I$(kernel_path)/include/drm"
 
+autoreconf -vif
+
 do_configure \
   --with-xorg-module-dir=$XORG_PATH_MODULES \
 
