mesa : host build need also to be dependent on graphic driver selecttion

--- a/packages/mesa/build
+++ b/packages/mesa/build
@@ -42,7 +42,25 @@ EGL_DISPLAYS="x11,drm"
 
 # build the internal compiler
 setup_toolchain host
-do_configure
+do_configure \
+  --disable-selinux \
+  --enable-glx-tls \
+  --enable-dri \
+  --with-dri-drivers="$DRI_DRIVERS" \
+  --with-gallium-drivers="$GALLIUM_DRIVERS" \
+  $GALLIUM_EGL \
+  --enable-opengl \
+  --enable-gles1 \
+  --enable-gles2 \
+  $GALLIUM_OVG \
+  $GALLIUM_LLVM \
+  --enable-shared-glapi \
+  --enable-shared-dricore \
+  --enable-driglx-direct \
+  --enable-glu \
+  $VDPAU \
+  $XVMC \
+
 make \
   CC="$HOST_CC" \
   CXX="$HOST_CXX" \
