--- a/packages/busybox/config/busybox.conf
+++ b/packages/busybox/config/busybox.conf
@@ -673,8 +673,8 @@ CONFIG_INOTIFYD=y
 # CONFIG_LAST is not set
 # CONFIG_FEATURE_LAST_SMALL is not set
 # CONFIG_FEATURE_LAST_FANCY is not set
-CONFIG_HDPARM=y
-CONFIG_FEATURE_HDPARM_GET_IDENTITY=y
+# CONFIG_HDPARM is not set
+# CONFIG_FEATURE_HDPARM_GET_IDENTITY is not set
 # CONFIG_FEATURE_HDPARM_HDIO_SCAN_HWIF is not set
 # CONFIG_FEATURE_HDPARM_HDIO_UNREGISTER_HWIF is not set
 # CONFIG_FEATURE_HDPARM_HDIO_DRIVE_RESET is not set
