ffmpeg : enable avfilter

--- a/packages/ffmpeg/build
+++ b/packages/ffmpeg/build
@@ -48,7 +48,7 @@ do_gcc_strip_gold
             --disable-ffserver \
             --disable-ffmpeg \
             --enable-postproc \
-            --disable-avfilter \
+            --enable-avfilter \
             --enable-pthreads \
             --disable-x11grab \
             $OPTIM_CONFIG \
