libav : enable avfilter

--- a/packages/libav/build
+++ b/packages/libav/build
@@ -41,7 +41,7 @@ do_gcc_strip_gold
             --enable-gpl \
             --disable-ffmpeg \
             --enable-postproc \
-            --disable-avfilter \
+            --enable-avfilter \
             --enable-pthreads \
             --disable-x11grab \
             $OPTIM_CONFIG \
