syslink-mm-firmware : bump version to 1.51.1.0

--- a/packages/syslink-mm-firmware/build
+++ b/packages/syslink-mm-firmware/build
@@ -10,3 +10,6 @@ rm -rf "$install_dir"
 mkdir -p "$install_dir/firmware/omap4"
 
 cp -PR *.xem3 "$install_dir/firmware/omap4"
+cp -PR *.xe64T "$install_dir/firmware/omap4"
+ln -s omap4/ducati-dce-sysm3.xem3 .install/firmware/ducati-m3-core0.xem3
+ln -s omap4/tesla-dvp-dsp.xe64T   .install/firmware/tesla-dsp.xe64T
