xf86-video-omap : fix issue with ld-linux.so

--- a/packages/xf86-video-omap/build
+++ b/packages/xf86-video-omap/build
@@ -18,3 +18,7 @@ patch -p0 < $ROOT/$PACKAGES/$1/patches/configure.diff-
 do_configure --with-xorg-module-dir=$XORG_PATH_MODULES
 make
 make_install
+
+mkdir -p .install/lib
+ln -s d-linux.so.3 .install/lib/ld-linux-armhf.so.3
+
