/xf86-video-omap : fix last commit

--- a/packages/xf86-video-omap/build
+++ b/packages/xf86-video-omap/build
@@ -20,5 +20,5 @@ make
 make_install
 
 mkdir -p .install/lib
-ln -s d-linux.so.3 .install/lib/ld-linux-armhf.so.3
+ln -s ld-linux.so.3 .install/lib/ld-linux-armhf.so.3
 
