llvm-host: fix failing build when stripping binaries

--- a/packages/llvm-host/build
+++ b/packages/llvm-host/build
@@ -23,7 +23,7 @@ do_configure host \
              --disable-assertions \
              --disable-expensive-checks \
              --disable-debug-runtime \
-             --disable-debug-symbols \
+             --enable-debug-symbols \
              --enable-jit \
              --disable-docs \
              --disable-doxygen \
