--- a/packages/busybox-init/config/busybox.conf
+++ b/packages/busybox-init/config/busybox.conf
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
-# Busybox version: 1.19.0
-# Sun Sep  4 19:01:25 2011
+# Busybox version: 1.20.0
+# Tue May  8 20:13:51 2012
 #
 CONFIG_HAVE_DOT_CONFIG=y
 
@@ -62,7 +62,10 @@ CONFIG_STATIC=y
 # CONFIG_FEATURE_SHARED_BUSYBOX is not set
 CONFIG_LFS=y
 CONFIG_CROSS_COMPILER_PREFIX=""
+CONFIG_SYSROOT=""
 CONFIG_EXTRA_CFLAGS=""
+CONFIG_EXTRA_LDFLAGS=""
+CONFIG_EXTRA_LDLIBS=""
 
 #
 # Debugging Options
@@ -92,7 +95,7 @@ CONFIG_PREFIX="./_install"
 # CONFIG_FEATURE_SYSTEMD is not set
 # CONFIG_FEATURE_RTMINMAX is not set
 CONFIG_PASSWORD_MINLEN=6
-CONFIG_MD5_SIZE_VS_SPEED=1
+CONFIG_MD5_SMALL=1
 CONFIG_FEATURE_FAST_TOP=y
 # CONFIG_FEATURE_ETC_NETWORKS is not set
 # CONFIG_FEATURE_USE_TERMIOS is not set
@@ -101,6 +104,7 @@ CONFIG_FEATURE_EDITING_MAX_LEN=1024
 # CONFIG_FEATURE_EDITING_VI is not set
 CONFIG_FEATURE_EDITING_HISTORY=45
 # CONFIG_FEATURE_EDITING_SAVEHISTORY is not set
+# CONFIG_FEATURE_EDITING_SAVE_ON_EXIT is not set
 # CONFIG_FEATURE_REVERSE_SEARCH is not set
 # CONFIG_FEATURE_TAB_COMPLETION is not set
 # CONFIG_FEATURE_USERNAME_COMPLETION is not set
@@ -140,6 +144,7 @@ CONFIG_IOCTL_HEX2STR_ERROR=y
 # CONFIG_GUNZIP is not set
 # CONFIG_GZIP is not set
 # CONFIG_FEATURE_GZIP_LONG_OPTIONS is not set
+CONFIG_GZIP_FAST=0
 # CONFIG_LZOP is not set
 # CONFIG_LZOP_COMPR_HIGH is not set
 # CONFIG_RPM2CPIO is not set
@@ -173,11 +178,13 @@ CONFIG_CAT=y
 # CONFIG_FEATURE_DATE_ISOFMT is not set
 # CONFIG_FEATURE_DATE_NANO is not set
 # CONFIG_FEATURE_DATE_COMPAT is not set
+# CONFIG_HOSTID is not set
 # CONFIG_ID is not set
 # CONFIG_GROUPS is not set
 CONFIG_TEST=y
 # CONFIG_FEATURE_TEST_64 is not set
 # CONFIG_TOUCH is not set
+# CONFIG_FEATURE_TOUCH_SUSV3 is not set
 CONFIG_TR=y
 CONFIG_FEATURE_TR_CLASSES=y
 CONFIG_FEATURE_TR_EQUIV=y
@@ -220,7 +227,6 @@ CONFIG_ENV=y
 # CONFIG_FSYNC is not set
 # CONFIG_HEAD is not set
 # CONFIG_FEATURE_FANCY_HEAD is not set
-# CONFIG_HOSTID is not set
 # CONFIG_INSTALL is not set
 # CONFIG_FEATURE_INSTALL_LONG_OPTIONS is not set
 CONFIG_LN=y
@@ -453,6 +459,7 @@ CONFIG_LAST_SYSTEM_ID=0
 # CONFIG_FEATURE_DEL_USER_FROM_GROUP is not set
 # CONFIG_GETTY is not set
 # CONFIG_LOGIN is not set
+# CONFIG_LOGIN_SESSION_AS_CHILD is not set
 # CONFIG_PAM is not set
 # CONFIG_LOGIN_SCRIPTS is not set
 # CONFIG_FEATURE_NOLOGIN is not set
@@ -461,6 +468,7 @@ CONFIG_LAST_SYSTEM_ID=0
 # CONFIG_FEATURE_PASSWD_WEAK_CHECK is not set
 # CONFIG_CRYPTPW is not set
 # CONFIG_CHPASSWD is not set
+CONFIG_FEATURE_DEFAULT_PASSWD_ALGO=""
 # CONFIG_SU is not set
 # CONFIG_FEATURE_SU_SYSLOG is not set
 # CONFIG_FEATURE_SU_CHECKS_SHELLS is not set
@@ -510,6 +518,12 @@ CONFIG_DEFAULT_DEPMOD_FILE=""
 # Linux System Utilities
 #
 # CONFIG_BLOCKDEV is not set
+CONFIG_MDEV=y
+# CONFIG_FEATURE_MDEV_CONF is not set
+# CONFIG_FEATURE_MDEV_RENAME is not set
+# CONFIG_FEATURE_MDEV_RENAME_REGEXP is not set
+# CONFIG_FEATURE_MDEV_EXEC is not set
+CONFIG_FEATURE_MDEV_LOAD_FIRMWARE=y
 # CONFIG_REV is not set
 # CONFIG_ACPID is not set
 # CONFIG_FEATURE_ACPID_COMPAT is not set
@@ -553,12 +567,6 @@ CONFIG_DMESG=y
 # CONFIG_LOSETUP is not set
 # CONFIG_LSPCI is not set
 # CONFIG_LSUSB is not set
-CONFIG_MDEV=y
-# CONFIG_FEATURE_MDEV_CONF is not set
-# CONFIG_FEATURE_MDEV_RENAME is not set
-# CONFIG_FEATURE_MDEV_RENAME_REGEXP is not set
-# CONFIG_FEATURE_MDEV_EXEC is not set
-CONFIG_FEATURE_MDEV_LOAD_FIRMWARE=y
 # CONFIG_MKSWAP is not set
 # CONFIG_FEATURE_MKSWAP_UUID is not set
 # CONFIG_MORE is not set
@@ -823,6 +831,7 @@ CONFIG_ROUTE=y
 # CONFIG_FEATURE_TRACEROUTE_USE_ICMP is not set
 # CONFIG_TUNCTL is not set
 # CONFIG_FEATURE_TUNCTL_UG is not set
+# CONFIG_UDHCPC6 is not set
 # CONFIG_UDHCPD is not set
 # CONFIG_DHCPRELAY is not set
 # CONFIG_DUMPLEASES is not set
@@ -869,6 +878,7 @@ CONFIG_FEATURE_MIME_CHARSET=""
 # Process Utilities
 #
 # CONFIG_IOSTAT is not set
+CONFIG_LSOF=y
 # CONFIG_MPSTAT is not set
 # CONFIG_NMETER is not set
 # CONFIG_PMAP is not set
@@ -890,6 +900,7 @@ CONFIG_FREE=y
 # CONFIG_PKILL is not set
 CONFIG_PS=y
 CONFIG_FEATURE_PS_WIDE=y
+CONFIG_FEATURE_PS_LONG=y
 # CONFIG_FEATURE_PS_TIME is not set
 # CONFIG_FEATURE_PS_ADDITIONAL_COLUMNS is not set
 # CONFIG_FEATURE_PS_UNUSUAL_SYSTEMS is not set
