busybox : remove applet mount, broken with ntfs partitions, add mount from util-linux-ng

--- a/packages/busybox/config/busybox.conf
+++ b/packages/busybox/config/busybox.conf
@@ -570,7 +570,7 @@ CONFIG_LSPCI=y
 CONFIG_MKSWAP=y
 CONFIG_FEATURE_MKSWAP_UUID=y
 CONFIG_MORE=y
-CONFIG_MOUNT=y
+# CONFIG_MOUNT is not set
 CONFIG_FEATURE_MOUNT_FAKE=y
 CONFIG_FEATURE_MOUNT_VERBOSE=y
 CONFIG_FEATURE_MOUNT_HELPERS=y
