libusb-host: add new package

--- a/packages/libusb-host/build
+++ b/packages/libusb-host/build
@@ -2,15 +2,17 @@
 
 . config/options
 
-cd $BUILD/$1-1*
+cd $BUILD/libusb-1*
 
-mkdir objdir-target
-cd objdir-target
+setup_toolchain host
 
-do_configure \
+mkdir objdir-host
+cd objdir-host
+
+do_configure host \
             --disable-log \
             --disable-debug-log \
             --disable-examples-build \
 
 make
-make_install
+make_install toolchain
