riff-loadercomm: fix build patch the used compiler

--- a/packages/riff-loadercomm/build
+++ b/packages/riff-loadercomm/build
@@ -11,6 +11,9 @@ RIFF_ARCH=""
 
 make config
 
+sed -i "s: g++: ${HOST_CXX}:g" .config
+sed -i "s: gcc: ${HOST_CC}:g" lcmodule/.config
+
 make
 make install
 
