--- a/packages/riff/build
+++ b/packages/riff/build
@@ -9,10 +9,13 @@ setup_toolchain host
 LOADERCOM_SRC=`ls -d ../riff-loadercomm-*/source`
 
 sed -i riff/riff.mk \
-  -e "s:^CFLAGS=\(.*\)$:CFLAGS=\\1 -I../${LOADERCOM_SRC}:" \
+  -e "s:^CFLAGS=\(.*\)$:CFLAGS=\\1 -I../${LOADERCOM_SRC} -I${ROOT}/${TOOLCHAIN}/include/libusb-1.0/:"\
   -e "s:^LDFLAGS=\(.*\)$:LDFLAGS=\\1 -L${ROOT}/${TOOLCHAIN}/lib:" \
 
-make
+sed -i CDAL/CDAL.mk \
+  -e "s:-I/usr:-I${ROOT}/${TOOLCHAIN}:"\
+
+LIBS="-lpthread" make
 
 rm -rf .install
 mkdir -p .install/usr/bin .install/usr/lib
