--- a/config/platforms/arm/ux500/linux.conf
+++ b/config/platforms/arm/ux500/linux.conf
@@ -146,6 +146,7 @@ CONFIG_AUDIT_GENERIC=y
 # CONFIG_AUDIT_LOGINUID_IMMUTABLE is not set
 CONFIG_AUDIT_TREE=y
 CONFIG_AUDIT_WATCH=y
+# CONFIG_AUFS_FS is not set
 # CONFIG_AUTOFS4_FS is not set
 # CONFIG_AUTO_ZRELADDR is not set
 # CONFIG_AUXDISPLAY is not set
@@ -246,7 +247,9 @@ CONFIG_BSD_DISKLABEL=y
 CONFIG_BSD_PROCESS_ACCT=y
 # CONFIG_BSD_PROCESS_ACCT_V3 is not set
 CONFIG_BT=y
-# CONFIG_BTRFS_FS is not set
+CONFIG_BTRFS_FS=y
+CONFIG_BTRFS_FS_CHECK_INTEGRITY=y
+# CONFIG_BTRFS_FS_POSIX_ACL is not set
 CONFIG_BT_BNEP=y
 CONFIG_BT_BNEP_MC_FILTER=y
 CONFIG_BT_BNEP_PROTO_FILTER=y
@@ -399,7 +402,7 @@ CONFIG_CRYPTO_BLKCIPHER2=y
 # CONFIG_CRYPTO_CAST6 is not set
 CONFIG_CRYPTO_CBC=y
 # CONFIG_CRYPTO_CCM is not set
-CONFIG_CRYPTO_CRC32C=m
+CONFIG_CRYPTO_CRC32C=y
 # CONFIG_CRYPTO_CRYPTD is not set
 # CONFIG_CRYPTO_CTR is not set
 # CONFIG_CRYPTO_CTS is not set
@@ -535,6 +538,7 @@ CONFIG_DEFAULT_SECURITY_APPARMOR=y
 # CONFIG_DEFAULT_SECURITY_DAC is not set
 # CONFIG_DEFAULT_SECURITY_SELINUX is not set
 # CONFIG_DEFAULT_SECURITY_SMACK is not set
+# CONFIG_DEFAULT_SECURITY_YAMA is not set
 CONFIG_DEFAULT_TCP_CONG="cubic"
 CONFIG_DEFCONFIG_LIST="/lib/modules/$UNAME_RELEASE/.config"
 # CONFIG_DEPRECATED_PARAM_STRUCT is not set
@@ -671,8 +675,13 @@ CONFIG_FIRMWARE_IN_KERNEL=y
 CONFIG_FLATMEM=y
 CONFIG_FLATMEM_MANUAL=y
 CONFIG_FLAT_NODE_MEM_MAP=y
+# CONFIG_FONTS is not set
+CONFIG_FONT_8x16=y
+CONFIG_FONT_8x8=y
 CONFIG_FORCE_MAX_ZONEORDER=12
-# CONFIG_FRAMEBUFFER_CONSOLE is not set
+CONFIG_FRAMEBUFFER_CONSOLE=y
+CONFIG_FRAMEBUFFER_CONSOLE_DETECT_PRIMARY=y
+# CONFIG_FRAMEBUFFER_CONSOLE_ROTATION is not set
 CONFIG_FRAME_POINTER=y
 CONFIG_FRAME_WARN=1024
 CONFIG_FREEZER=y
@@ -693,6 +702,7 @@ CONFIG_FUNCTION_TRACER=y
 CONFIG_FUTEX=y
 CONFIG_FW_LOADER=y
 # CONFIG_GAMEPORT is not set
+CONFIG_GATOR=m
 # CONFIG_GCOV_KERNEL is not set
 CONFIG_GENERIC_ACL=y
 CONFIG_GENERIC_BUG=y
@@ -899,6 +909,7 @@ CONFIG_INET_XFRM_MODE_TUNNEL=y
 # CONFIG_INET_XFRM_TUNNEL is not set
 CONFIG_INITRAMFS_SOURCE=""
 CONFIG_INIT_ENV_ARG_LIMIT=32
+CONFIG_INIT_PASS_ALL_PARAMS=y
 # CONFIG_INLINE_READ_LOCK is not set
 # CONFIG_INLINE_READ_LOCK_BH is not set
 # CONFIG_INLINE_READ_LOCK_IRQ is not set
@@ -1092,7 +1103,7 @@ CONFIG_LBDAF=y
 # CONFIG_LEDS_BD2802 is not set
 CONFIG_LEDS_CLASS=y
 # CONFIG_LEDS_DAC124S085 is not set
-# CONFIG_LEDS_GPIO is not set
+CONFIG_LEDS_GPIO=y
 # CONFIG_LEDS_LM3530 is not set
 # CONFIG_LEDS_LP3944 is not set
 # CONFIG_LEDS_LP5521 is not set
@@ -1106,14 +1117,14 @@ CONFIG_LEDS_PWM=y
 # CONFIG_LEDS_RENESAS_TPU is not set
 # CONFIG_LEDS_TCA6507 is not set
 CONFIG_LEDS_TRIGGERS=y
-# CONFIG_LEDS_TRIGGER_BACKLIGHT is not set
-# CONFIG_LEDS_TRIGGER_DEFAULT_ON is not set
-# CONFIG_LEDS_TRIGGER_GPIO is not set
-# CONFIG_LEDS_TRIGGER_HEARTBEAT is not set
+CONFIG_LEDS_TRIGGER_BACKLIGHT=m
+CONFIG_LEDS_TRIGGER_DEFAULT_ON=m
+CONFIG_LEDS_TRIGGER_GPIO=m
+CONFIG_LEDS_TRIGGER_HEARTBEAT=y
 CONFIG_LEDS_TRIGGER_TIMER=y
 # CONFIG_LEGACY_PTYS is not set
 # CONFIG_LIB80211 is not set
-CONFIG_LIBCRC32C=m
+CONFIG_LIBCRC32C=y
 # CONFIG_LIBFC is not set
 # CONFIG_LIBFCOE is not set
 # CONFIG_LINE6_USB is not set
@@ -1502,6 +1513,7 @@ CONFIG_OLD_MCOUNT=y
 # CONFIG_OSF_PARTITION is not set
 CONFIG_OUTER_CACHE=y
 CONFIG_OUTER_CACHE_SYNC=y
+# CONFIG_OVERLAYFS_FS is not set
 CONFIG_PACKET=y
 CONFIG_PAGEFLAGS_EXTENDED=y
 CONFIG_PAGE_OFFSET=0xC0000000
@@ -1743,6 +1755,7 @@ CONFIG_SECURITY=y
 CONFIG_SECURITYFS=y
 CONFIG_SECURITY_APPARMOR=y
 CONFIG_SECURITY_APPARMOR_BOOTPARAM_VALUE=1
+CONFIG_SECURITY_APPARMOR_COMPAT_24=y
 # CONFIG_SECURITY_DMESG_RESTRICT is not set
 CONFIG_SECURITY_NETWORK=y
 # CONFIG_SECURITY_NETWORK_XFRM is not set
@@ -1756,6 +1769,7 @@ CONFIG_SECURITY_SELINUX_DEVELOP=y
 # CONFIG_SECURITY_SELINUX_POLICYDB_VERSION_MAX is not set
 CONFIG_SECURITY_SMACK=y
 # CONFIG_SECURITY_TOMOYO is not set
+CONFIG_SECURITY_YAMA=y
 # CONFIG_SEEQ8005 is not set
 CONFIG_SELECT_MEMORY_MODEL=y
 # CONFIG_SENSORS_AB5500 is not set
@@ -2321,6 +2335,7 @@ CONFIG_USB_ZERO=m
 # CONFIG_USB_ZR364XX is not set
 CONFIG_USE_GENERIC_SMP_HELPERS=y
 # CONFIG_USE_OF is not set
+CONFIG_UX500_CONSOLE_UART_GPIO_PIN=29
 CONFIG_UX500_CONTEXT=y
 CONFIG_UX500_DB_DUMP=y
 # CONFIG_UX500_DEBUG_HWREG is not set
@@ -2333,13 +2348,18 @@ CONFIG_UX500_SOC_COMMON=y
 # CONFIG_UX500_SOC_DB5500 is not set
 CONFIG_UX500_SOC_DB8500=y
 CONFIG_UX500_SOC_DBX500=y
-# CONFIG_UX500_SUSPEND is not set
+CONFIG_UX500_SUSPEND=y
+CONFIG_UX500_SUSPEND_DBG=y
+CONFIG_UX500_SUSPEND_DBG_WAKE_ON_UART=y
+CONFIG_UX500_SUSPEND_MEM=y
+CONFIG_UX500_SUSPEND_STANDBY=y
 CONFIG_UX500_WATCHDOG=y
 CONFIG_UX500_WATCHDOG_DEBUG=y
 # CONFIG_V4L_MEM2MEM_DRIVERS is not set
 # CONFIG_V4L_PLATFORM_DRIVERS is not set
 CONFIG_V4L_USB_DRIVERS=y
 CONFIG_VECTORS_BASE=0xffff0000
+CONFIG_VERSION_SIGNATURE=""
 # CONFIG_VETH is not set
 CONFIG_VFAT_FS=y
 CONFIG_VFP=y
@@ -2403,6 +2423,7 @@ CONFIG_VIDEO_MEDIA=y
 # CONFIG_VIDEO_USBVISION is not set
 CONFIG_VIDEO_V4L2=y
 CONFIG_VIDEO_V4L2_COMMON=y
+# CONFIG_VIDEO_VIVI is not set
 # CONFIG_VIDEO_VP27SMPX is not set
 # CONFIG_VIDEO_VPX3220 is not set
 # CONFIG_VIDEO_WM8739 is not set
@@ -2449,12 +2470,7 @@ CONFIG_XPS=y
 CONFIG_ZBOOT_ROM_BSS=0x0
 CONFIG_ZBOOT_ROM_TEXT=0x0
 CONFIG_ZISOFS=y
+CONFIG_ZLIB_DEFLATE=y
 CONFIG_ZLIB_INFLATE=y
 CONFIG_ZONE_DMA_FLAG=0
 # CONFIG_ZRAM is not set
-#
-# Config options for config.common.armel automatically generated by splitconfig.pl
-#
-#
-# Config options for config.flavour.ux500 automatically generated by splitconfig.pl
-#
