snowball: move snowball specific packages to the arm/ux500 platform

--- a/config/platforms/arm/ux500/packages/xf86-video-mali/config/90-mali.conf
+++ b/config/platforms/arm/ux500/packages/xf86-video-mali/config/90-mali.conf
@@ -11,13 +11,28 @@ EndSection
 Section "Screen"
     Identifier      "Mali Screen"
     Device          "Mali FBDEV"
-    DefaultDepth    24
+    Monitor         "Main Monitor"
+#    DefaultDepth    24
 EndSection
 
 Section "DRI"
     Mode 0666
+EndSection 
+
+Section "Monitor"
+    Identifier	"Main Monitor"
+    Option      "DPMS"
 EndSection
 
 Section "Extensions"
     Option      "Composite"             "Disable"
+EndSection
+
+Section "ServerLayout"
+    Identifier      "Default Layout"
+    Screen          "Mali Screen"
+    Option          "BlankTime"     "0"
+    Option          "StandbyTime"   "0"
+    Option          "SuspendTime"   "0"
+    Option          "OffTime"       "0"
 EndSection
