geexbox-xbmc-x86_64-generic.conf : updated - module-init-tools (depmod) needs to be installed by default

--- a/config/defconfigs/geexbox-xbmc-x86_64-generic.conf
+++ b/config/defconfigs/geexbox-xbmc-x86_64-generic.conf
@@ -2,7 +2,7 @@
 # Automatically generated file; DO NOT EDIT.
 # OpenBricks Configuration
 #
-CONFIG_KERNELVERSION="devel-20120402-r14088"
+CONFIG_KERNELVERSION="devel-20120512-r14280"
 CONFIG_MODULES=y
 # CONFIG_FLAVOUR_base is not set
 CONFIG_FLAVOUR_geexbox=y
@@ -231,8 +231,9 @@ CONFIG_AUTOMOUNTER_NFS=y
 # CONFIG_PKG_configurator is not set
 # CONFIG_PKG_debug is not set
 # CONFIG_PKG_dietsplash is not set
-# CONFIG_PKG_efibootmgr is not set
+CONFIG_PKG_efibootmgr=y
 # CONFIG_PKG_grub is not set
+# CONFIG_PKG_hdparm is not set
 CONFIG_PKG_installator=y
 CONFIG_OPT_INSTALLATOR=y
 # CONFIG_PKG_ndiswrapper-tool is not set
@@ -257,6 +258,7 @@ CONFIG_PKG_lirc=y
 CONFIG_OPT_lirc_devtools=y
 # CONFIG_PKG_ndiswrapper is not set
 # CONFIG_PKG_s2-liplianin is not set
+# CONFIG_PKG_tbs-drivers is not set
 # CONFIG_PKG_tibtfm-wl1271 is not set
 
 #
@@ -312,7 +314,6 @@ CONFIG_PKG_ralink-firmware=y
 CONFIG_PKG_tevii-dvb-firmware=y
 # CONFIG_PKG_ti-connectivity-firmware is not set
 # CONFIG_PKG_tibtfm-wl1271-firmware is not set
-# CONFIG_PKG_ux500-firmware is not set
 CONFIG_PKG_zd1201-firmware=y
 CONFIG_PKG_zd1211-firmware=y
 
@@ -442,6 +443,7 @@ CONFIG_PKG_libcec=y
 # CONFIG_PKG_libcroco is not set
 CONFIG_PKG_libdaemon=y
 # CONFIG_PKG_libdce is not set
+CONFIG_PKG_libdri2=y
 # CONFIG_PKG_libdvbpsi is not set
 # CONFIG_PKG_libdvdnav is not set
 # CONFIG_PKG_libdvdread is not set
@@ -622,7 +624,6 @@ CONFIG_PKG_libva-xvba=y
 # CONFIG_PKG_libvalhalla is not set
 CONFIG_PKG_libvdpau=y
 # CONFIG_PKG_livepause is not set
-# CONFIG_PKG_mali400 is not set
 # CONFIG_PKG_mex is not set
 # CONFIG_PKG_mythplugins is not set
 # CONFIG_PKG_myththemes is not set
@@ -884,6 +885,7 @@ CONFIG_PKG_evtest=y
 # CONFIG_PKG_gcc-final is not set
 CONFIG_PKG_i18n-keymaps=y
 CONFIG_PKG_i18n-locales=y
+# CONFIG_PKG_kbd is not set
 CONFIG_PKG_kmod=y
 CONFIG_PKG_linux=y
 CONFIG_OPT_linux_alsa=y
@@ -920,7 +922,8 @@ CONFIG_OPT_linux_radeon=y
 CONFIG_OPT_linux_unichrome=y
 CONFIG_OPT_linux_vmwgfx=y
 CONFIG_PKG_llvm=y
-# CONFIG_PKG_pciutils is not set
+CONFIG_PKG_module-init-tools=y
+CONFIG_PKG_pciutils=y
 CONFIG_PKG_polkit=y
 # CONFIG_PKG_ralink-8070-3070-3370-5372-usb is not set
 CONFIG_PKG_syslinux=y
@@ -972,6 +975,7 @@ CONFIG_PKG_wscan=y
 CONFIG_PKG_xbmc-addon-geexbox-network=y
 CONFIG_PKG_xbmc-addon-geexbox-updater=y
 # CONFIG_PKG_xdotool is not set
+# CONFIG_PKG_xvattr is not set
 
 #
 # x11
@@ -1007,6 +1011,7 @@ CONFIG_OPT_libdrm_radeon=y
 CONFIG_OPT_libdrm_nouveau=y
 CONFIG_OPT_libdrm_vmwgfx=y
 # CONFIG_OPT_libdrm_glamo is not set
+# CONFIG_OPT_libdrm_omap is not set
 CONFIG_PKG_libfontenc=y
 CONFIG_PKG_libpciaccess=y
 CONFIG_PKG_libxcb=y
